--- a/public/tags/templates/index.html
+++ b/public/tags/templates/index.html
@@ -10,12 +10,12 @@
     <meta name="keywords" content="blog,data science,personal">
 
     <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Templates"/>
+<meta name="twitter:title" content="templates"/>
 <meta name="twitter:description" content="David Dai&#39;s personal website"/>
 
 
     <base href="/tags/templates/">
-    <title>Tag: Templates · David Dai</title>
+    <title>Tag: templates · David Dai</title>
 
     <link rel="canonical" href="/tags/templates/">
 
@@ -49,7 +49,7 @@
       <link href="/tags/templates/index.xml" rel="feed" type="application/rss+xml" title="David Dai" />
     
 
-    <meta name="generator" content="Hugo 0.48" />
+    <meta name="generator" content="Hugo 0.55.6" />
   </head>
 
   <body class=" inverted">
@@ -69,11 +69,15 @@
           </li>
         
           <li class="navigation-item">
-            <a class="navigation-link" href="/cv.pdf">CV</a>
+            <a class="navigation-link" href="/daviddai_resume.pdf">Resume</a>
           </li>
         
           <li class="navigation-item">
             <a class="navigation-link" href="/post/">Blog</a>
+          </li>
+        
+          <li class="navigation-item">
+            <a class="navigation-link" href="/projects/">Projects</a>
           </li>
         
           <li class="navigation-item">
@@ -90,7 +94,7 @@
       <div class="content">
         
   <section class="container list">
-  <h1 class="title">Tag: Templates</h1>
+  <h1 class="title">Tag: templates</h1>
   <ul>
     
     <li>
